# HelloFFmpeg

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/sunny/helloffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegCore.c  FFmpegCore.h  OpenSLES_AudioPlayer.c  OpenSLES_AudioPlayer.h  SurfaceVideoPlayer.c  SurfaceVideoPlayer.h  com_sunny_helloffmpeg_NativeFFplayer.cpp  com_sunny_helloffmpeg_NativeFFplayer.h  log.h  native-lib.cpp
app/src/main/java/com/sunny/helloffmpeg/: Main2Activity.java  Main3Activity.java  MainActivity.java  NativeFFplayer.java
app/src/main/res/drawable/: ic_corp_icon_badge_doubleapp.xml  ic_shuangkai.xml
app/src/main/res/layout/: activity_main.xml  activity_main2.xml  activity_main3.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sunny/helloffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
